fixed an issue that disabled y-scrolling on all pages and imporved footer layout on smaller devices

--- a/src/modules/login/styles/login.scss
+++ b/src/modules/login/styles/login.scss
@@ -4,10 +4,8 @@
 html,body{
 	position:relative;
 	height:100%;
-	height:100vh;
 	width: 100%;
 	width: 100vw;
-	overflow:hidden;
 	margin:0;
 	padding:0;
 }
